<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="product"
            type="com.wit.homegrownapp.model.ProductModel" />
    </data>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:id="@+id/cardProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_marginTop="10dp"
            android:text="@{product.component1()}"
            android:textSize="24sp" />
        //android:text="@string/date"

        <TextView
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:textSize="24sp"
            android:text="@{product.title}"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{product.component3()}"
            android:textSize="24sp" />
        //android:text="@string/phoneNumber"             android:layout_below="@+id/buttonUpdate"



    </RelativeLayout>
</androidx.cardview.widget.CardView>
</layout>