<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addproductvm"
            type="com.wit.homegrownapp.ui.addProduct.AddProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.BookingDetailFragment">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/title"
            android:textAlignment="textEnd"
            android:textColor="@color/green_500"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/editTitle"
            app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editDonationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteDonationButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/deleteDonationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editDonationButton" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:entries="@array/categoryArray"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="568dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>